# agent_junior

./: .env.template  .gitignore  PROBLEM.md  README.md  eval.py  pyproject.toml  smoke_test.py
data/: all_queries.json  sample_queries.json
notebooks/: evaluation.ipynb  example_code_to_run.py
solutions/: README.md  __init__.py  custom_router.py  models.py
src/: __init__.py  benchmarking.py  config.py  latency.py  model_registry.py  quality.py  router.py
